estilização Footer e Perfil

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/https://avatars.githubusercontent.com/u/202289515?s=280&v=4" />
+    <link rel="icon" type="image/png" href="https://imgur.com/5jnLBtD.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>People Flow</title>
   </head>
